@@ -1,3 +1,8 @@
+2008-11-20   Toru TSUNEYOSHI  <t_tuneyosi@hotmail.com>
+
+	* buff-menu.el (Buffer-menu-buffer+size, list-buffers-noselect):
+	Pay attention to char widths when computing string sizes.
+
 2008-11-20  Juanma Barranquero  <lekktu@gmail.com>
 
 	* emacs-lisp/bytecomp.el (byte-compile-dynamic-docstrings)
